[package]
name = "logical-expression"
version = "0.1.0"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys="0.3.39"
yew = "0.15"
wasm-bindgen = "0.2"
wee_alloc="*"

[dependencies.web-sys]
version="0.3.39"
features=["HtmlAnchorElement","Exception","CssStyleDeclaration"]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggresive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true